# space-analyzer-pro

./: .editorconfig  .env  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc  ARCHITECTURE.md  CHANGELOG-SIMPLIFIED.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DATABASE_UPDATES.md  ERROR_TRACKER.md  GPU_OPTIMIZATION_GUIDE.md  ISSUES.md  LICENSE  NATIVE_BUILD_README.md  OLLAMA_CLOUD_RATE_LIMITING.md  OLLAMA_TEST_REPORT.md  ORCHESTRATOR_STEPS_4-6.md  PROJECT_STRUCTURE.md  README.md  REORGANIZATION.md  SECURITY.md  TODO.md  USER_DIRECTORY_TEST.md  WINDOWS_BUILD_PREREQUISITES.md  WINDOWS_GUI_ERROR_TRACKER.md  ai_status_restart_test.json  allure.config.js  analysis_health_restart_test.json  build-env-template.ps1  build-error.txt  build-log.txt  build-rust-apps.bat  build_error.txt  check-icons.js  console-monitor.js  debug-frontend.js  (+53 more)
.cargo/: config.toml
.github/: topics.md
.husky/: pre-commit
.mcp/: browsermcp.json  config.json
.playwright-mcp/: page-2026-05-06T04-15-24-903Z.yml
ai-service/: .env.example  .gitignore  README.md  automated_feedback_loop.py  main.py  ollama_client.py  pyproject.toml  requirements.txt  start.ps1  start.sh  test_api.py
ai-service/app/: __init__.py  config.py  main.py
ai-service/app/routers/: auth.py  categorizer.py  health.py  ollama.py  predictions.py
ai-service/app/services/: ml_predictions.py  ml_service.py  ollama_service.py
ai-service/ml_categorizer/: README.md  requirements.txt
ai-service/ml_categorizer/src/: api.py  categorizer.py  trainer.py
ai-service/scripts/: lint.sh  test.sh
ai-service/tests/: test_api.py
build-tools/: cleanup-path-permanent.bat  complete-wsl-setup.ps1  fix_build_environment.bat  run-app.ps1  rust-env.bat  setup-build-environment.bat  setup-rust-permanent.bat  verify-wsl.ps1  vs_path.txt  vs_paths.txt  wsl-setup-fixed.ps1
dist-latest/: index.html  ollama-test.html
dist-new/: index.html
docs/: .gitignore  ACTIONABLE_FEEDBACK_SUMMARY.md  AI_ENHANCED_FEATURES.md  AI_FEATURES_IMPLEMENTATION.md  AI_PERFORMANCE_OPTIMIZATION_GUIDE.md  AI_SERVICE_CONSOLIDATION.md  AI_UI_IMPROVEMENT_README.md  AUTOMATIC_PORT_DETECTION_GUIDE.md  BROWSE_BUTTON_FIX.md  CHANGELOG.md  COMPONENTS.md  COMPONENT_ENHANCEMENTS_SUMMARY.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_ENHANCEMENT_SUMMARY.md  CONSOLIDATED_ISSUE_TRACKER.csv  CONTEXT_PAYLOAD_OPTIMIZATION.md  CONTRIBUTING.md  CSS_ENHANCEMENT_ANALYSIS.md  CSS_IMPLEMENTATION_SUMMARY.md  DEVELOPMENT.md  DOCUMENTATION_AUDIT_REPORT.md  ENHANCED_API_REFERENCE.md  ENHANCED_CODE_ANALYSIS_COMPLETE.md  ENHANCED_CODE_ANALYSIS_PLAN.md  ENHANCED_COMPONENTS_DOCUMENTATION.md  ENHANCED_FEATURES_VALIDATION_REPORT.md  ENHANCED_IMPLEMENTATION_COMPLETE.md  FEATURE_DOCUMENTATION_COMPLETE.md  FINAL_INTEGRATION_TEST_REPORT.md  FINAL_REFACTORING_SUCCESS_REPORT.md  FIXES_DOCUMENTATION.md  FRONTEND_ANALYSIS_REPORT.md  FRONTEND_UPDATE.md  GPU_FIX_GUIDE.md  IMPLEMENTATION_SUMMARY.md  ISSUE_CATEGORIZATION_FRAMEWORK.md  ISSUE_TRACKER.md  ISSUE_TRACKER_ANALYSIS.md  ISSUE_TRACKER_CONSOLIDATED.csv  ISSUE_TRACKER_CONSOLIDATED_FIXED.csv  (+59 more)
docs/technical/: CMakeLists.txt  COMPREHENSIVE_ANALYSIS_INTEGRATION.md  FEATURE_DOCUMENTATION.md  SERVER_ARCHITECTURE.md  WINDSURF_MCP_COMMANDS.md  WINDSURF_QUICK_START.md
gpu-compute/: Cargo.toml
gpu-compute/src/: device.rs  hash.rs  lib.rs  ml.rs  scan.rs
native-gui/: Cargo.toml  README.md  build.bat  build.rs
native-gui/.cargo/: config.toml
native-gui/scripts/: build.bat  package.bat
native-gui/src/: app.rs  charts.rs  main.rs  ollama_cuda.rs  scanner.rs  theme.rs  types.rs
native/archive_manager/: Cargo.toml  README.md
native/archive_manager/src/: lib.rs  main.rs
native/file_deduplicator/: Cargo.toml  README.md
native/file_deduplicator/src/: lib.rs  main.rs
native/file_monitor/: Cargo.toml  README.md
native/file_monitor/src/: lib.rs  main.rs
native/scanner/: BUILD.md  BUILD_FIX.md  Cargo.toml  build-cli.bat  build-release.bat  build-with-vs2022.bat  enhanced_performance_output.json  final_output.json  improved_output.json  package.json  performance_test_final.json  test_json_progress.json  test_output.json  test_performance_monitoring.json
native/scanner/src/: lib.rs  main.rs  ntfs_mft_scanner.rs  usn_journal_scanner.rs  windows_advanced.rs  windows_errors.rs
native/storage_predictor/: Cargo.toml  README.md
native/storage_predictor/src/: lib.rs  main.rs
performance-results/: vue-performance-1777242087270.json  vue-performance-1777242202648.json
public/: ollama-test.html  sample-analysis-data.json
scripts/: README.md  add-node-to-path.bat  add-node-to-path.cjs  add-node-to-path.js  add-node-to-path.ps1  add-system32-to-path.bat  add-system32-to-path.ps1  analyze_screenshots.py  build-tauri.bat  build-tauri.ps1  check-cline-settings.cjs  check-status.ps1  cleanup-redundancy.js  cleanup-results.js  cleanup.js  connectivity-test.cjs  create-icon.py  debug-css.js  debug-frontend.cjs  debug-test.js  detailed-check.cjs  diagnose-path.cjs  diagnose-path.js  direct-vision-test.js  (+73 more)
shared-scanner/: Cargo.toml
shared-scanner/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  scanner.rs
src/cpp/: CMakeLists.txt  README.md  build-with-vs.bat  build.bat  build.sh  cross-platform-abstraction.h  memory-management.h  minimal-cli.cpp  performance-monitoring.cpp  performance-monitoring.h  real-cli.cpp  simple-cli.cpp  space-analyzer-main-backup.cpp  space-analyzer-main.cpp  space-scanner.cpp  space-scanner.h
src/cpp/native-scanner/: CMakeLists.txt  binding.gyp  build-cpp.bat  build-cpp.ps1  create-binding.cjs  index.js  package-lock.json  package.json  update-binding.cjs
src/cpp/native-scanner/src/: native_scanner.cpp
src/rust/simple-scanner/: Cargo-simple.toml  Cargo.toml  index.d.ts  index.js  package.json
src/rust/simple-scanner/.cargo/: config.toml
src/rust/simple-scanner/src/: lib.rs
tools/design-screenshot/: Cargo.toml  build-with-vs2026.bat
tools/design-screenshot/src/: main.rs
(+1233 files in other folders)
