[package]
name = "gpu-compute"
version = "1.0.0"
edition = "2021"
description = "GPU-accelerated compute primitives for Space Analyzer"

[lib]
name = "gpu_compute"
crate-type = ["rlib"]

[dependencies]
# Workspace dependencies
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
blake3 = { workspace = true }

# CUDA bindings
cudarc = { version = "0.12", features = ["std"], optional = true }

# Fallback CPU implementations
ndarray = { version = "0.15", features = ["rayon"] }
rand = "0.8"

[features]
default = []
cuda = ["cudarc"]
