[package]
name = "space-analyzer-native"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "space-analyzer"
path = "src/main.rs"

[dependencies]
# GUI Framework
egui = "0.34"
eframe = { version = "0.34", features = ["default_fonts", "glow"] }

# Shared scanner library
shared-scanner = { path = "../shared-scanner" }

# GPU acceleration
gpu-compute = { path = "../gpu-compute" }

# File System Operations
walkdir = "2.3"
dirs = "5.0"
rfd = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
open = "5.0"

# HTTP client for Ollama (replaces subprocess approach)
ureq = { version = "2.9", features = ["json"] }

# Logging
env_logger = "0.11"

[features]
default = []

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
