[package]
name = "shared-scanner"
version = "1.0.0"
edition = "2021"
description = "Shared file scanner library for Space Analyzer Pro"

[lib]
name = "shared_scanner"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rayon = "1.8"
sysinfo = "0.39"
gpu-compute = { path = "../gpu-compute" }
