[package]
name = "shared-scanner"
version = "1.0.0"
edition = "2021"
description = "Shared file scanner library for Space Analyzer Pro"

[lib]
name = "shared_scanner"
crate-type = ["rlib"]

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
blake3 = { workspace = true }
walkdir = { workspace = true }

# Additional dependencies
sysinfo = "0.39"
gpu-compute = { path = "../gpu-compute" }
