[package]
name = "space-analyzer-pro"
version = "2.8.9"
description = "AI-Powered Space Analyzer with ML Categorization and Intelligent Caching"
authors = ["Space Analyzer Team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
