[package]
name = "archive-manager"
version = "1.0.0"
edition = "2021"
authors = ["Space Analyzer Team"]
description = "Cross-platform archive manager with cloud integration and smart compression"
license = "MIT"

[[bin]]
name = "archive-manager"
path = "src/main.rs"

[lib]
name = "archive_manager"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Archive formats
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
xz2 = "0.1"
lz4 = "1.24"
zstd = "0.13"
seven-zip-rust = "0.2"

# File system operations
walkdir = "2.3"
glob = "0.3"
tempfile = "3.8"
path-clean = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = {version = "0.7", features = ["io"]}

# Cloud storage integration
reqwest = { version = "0.11", features = ["json", "stream"] }
aws-config = "1.0"
aws-sdk-s3 = "1.0"
azure_storage_blobs = "0.19"
google-cloud-storage = "0.15"

# Progress tracking and UI
indicatif = "0.17"
console = "0.15"
colored = "2.0"

# Configuration and logging
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compression analysis
crc32fast = "1.3"
sha2 = "0.10"
md5 = "0.7"

# Parallel processing
rayon = "1.7"
crossbeam = "0.8"
num_cpus = "1.16"

# Web API for integration
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1
debug = true