[package]
name = "space-analyzer"
version = "1.0.0"
edition = "2021"
authors = ["Space Analyzer Team"]
description = "High-performance file analysis CLI for Space Analyzer Pro"
license = "MIT"

[[bin]]
name = "space-analyzer"
path = "src/main.rs"

[lib]
name = "space_scanner"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
regex = "1.5"
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
rayon = "1.7"
crossbeam = "0.8"
num_cpus = "1.16"

# Windows-specific dependencies for all NTFS and Windows features
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "fileapi",          # File operations, streams, compression
    "handleapi",        # Handle management
    "winbase",          # File information, times
    "winnt",            # NT definitions, security
    "minwindef",        # Basic types
    "aclapi",           # Security descriptors, ownership
    "accctrl",          # Access control
    "securitybaseapi",  # Security constants
    "sddl",             # SID conversion
    "std",              # Standard definitions
    "winioctl",         # I/O control codes (FSCTL_*)
    "ioapiset",         # DeviceIoControl
] }

# Remove Windows-specific dependencies
# tokio = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "2"
