[package]
name = "storage-predictor"
version = "1.0.0"
edition = "2021"
authors = ["Space Analyzer Team"]
description = "ML-powered storage prediction and trend analysis engine"
license = "MIT"

[[bin]]
name = "storage-predictor"
path = "src/main.rs"

[lib]
name = "storage_predictor"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Machine Learning with linfa
linfa = "0.7"
linfa-linear = "0.7"
linfa-trees = "0.7"
linfa-clustering = "0.7"
linfa-reduction = "0.7"
ndarray = "0.15"
ndarray-linalg = "0.16"

# GPU acceleration
gpu-compute = { path = "../../gpu-compute" }

# Data processing
polars = { version = "0.35", features = ["lazy", "temporal", "strings"] }
csv = "1.3"
regex = "1.5"

# Database integration
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Configuration and logging
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Mathematical utilities
statrs = "0.16"
approx = "0.5"

# Web API for integration
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Visualization data
plotly = "0.8"

[build-dependencies]
napi-build = "2"