[package]
name = "simple-scanner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
bumpalo = "3.14"
dashmap = "5.5"
sysinfo = "0.30"  # Better cross-platform replacement for sys-info
walkdir = "2.3"   # Directory walking
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "winbase", "errhandlingapi", "processthreadsapi", "sysinfoapi"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3